feat: communicate parent, child and grand child together

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Hello {{ name }}</h1>
-<app-parent class="box parent"></app-parent>
+<main class="container">
+  <h1>Components Communication</h1>
+  <app-parent class="box"></app-parent>
+</main>
