--- a/src/app/components/grand-child/grand-child.component.html
+++ b/src/app/components/grand-child/grand-child.component.html
@@ -1,4 +1,4 @@
-<h2>Child</h2>
+<h4>Grand Child</h4>
 <section>
   <div>
     <h3>Random number from Parent: {{ numberFromParent | json }}</h3>
@@ -7,8 +7,3 @@
     </button>
   </div>
 </section>
-<app-grand-child
-  class="box"
-  (onNumberToParent)="sendGrandChildNumberToParent($event)"
-  [numberFromParent]="numberToGrandChild"
-></app-grand-child>
