--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* Add application styles & imports to this file! */
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 * {
   box-sizing: border-box;
@@ -6,10 +6,19 @@
   padding: 0;
 }
 
+html {
+  font-family: 'Inter', sans-serif;
+}
+
 html,
 body {
   width: 100%;
   height: 100%;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 16px;
 }
 
 .container {
@@ -19,38 +28,35 @@ body {
 }
 
 .box {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  width: 90%;
   border: 1px solid black;
   padding: 1rem 1.5rem;
 }
 
-.parent {
-  width: 600px;
-  height: 250px;
+section {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 16px;
+  width: 100%;
 }
 
-.child {
-  width: 450px;
-  height: 150px;
+section div {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
-.grand-child {
-  width: 300px;
-  height: 100px;
+section div h3 {
+  font-weight: 400;
 }
 
-.red {
-  color: red;
-}
-
-table {
-  border: 1px solid lightgray;
-}
-
-table th:first-of-type {
-  border-right: 1px solid lightgray;
-}
-
-th, td {
-  padding: 4px 8px;
+button {
+  padding: 0.5rem 1rem;
+  border: none;
+  background-color: #FF9393;
+  border-radius: 4px;
 }
