--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -1,9 +1,12 @@
 <h2>Child</h2>
 <section>
   <div>
-    <h3>Random number from Parent: {{ numberFromParent | json }}</h3>
+    <h3>
+      {{ "Random number from Parent" | titlecase }}:
+      {{ numberFromParent | json }}
+    </h3>
     <button (click)="sendRandomNumberToParent()">
-      Send random number to Parent
+      {{ "Send random number to Parent" | titlecase }}
     </button>
   </div>
 </section>
