fix: improve titles semantic

--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -2,7 +2,7 @@
 <section>
   <div>
     <h3>
-      {{ "Random number from" | titlecase }} <b>Parent</b>:
+      {{ "Random number list from" | titlecase }} <b>Parent</b>:
       {{ numbersFromParent | parseRandomNumberList }}
     </h3>
     <button (click)="sendRandomNumberToParent()">
