feat: implement impure pipe

--- a/src/app/components/parent/parent.component.html
+++ b/src/app/components/parent/parent.component.html
@@ -11,8 +11,8 @@
   </div>
   <div>
     <h3>
-      {{ "Random number list from" | titlecase }} <b>Grand Child</b>:
-      {{ numbersFromGrandChild | parseRandomNumberList }}
+      {{ "Is last number sent from" | titlecase }} <b>Grand Child</b> Prime? :
+      {{ numbersFromGrandChild | isLastNumberPrime }}
     </h3>
     <button (click)="sendRandomNumberToGrandChild()">
       {{ "Send random number to Grand Child" | titlecase }}
